# iron-json

./: .gitignore  CMakeLists.txt  LICENSE.txt  download_deps.sh  json.h  main.cpp  readme.md  release.sh
.github/workflows/: ci.yml
bench/: bench.cpp
data/: demo.json
examples/: CMakeLists.txt  compile_size.cpp  create.cpp  example1.cpp  round_trip.cpp
include/iron/: json.cpp  json.h
test/: test  test.cpp  test.h  test_minefield.cpp  test_parse.cpp
